k8s/apps/_retired/glance/resources/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment

spec:
  replicas: 1
  selector:
    matchLabels:
      app: default
  template:
    metadata:
      labels:
        app: default
    spec:
      containers:
        - name: app
          image: ghcr.io/slashnephy/glance:main@sha256:6870d2f41ff40b4485ce402dfa0684615925fd22c0c13efccc2cffe8c1a336fa
          ports:
            - name: http
              containerPort: 8080
          volumeMounts:
            - name: config
              mountPath: /app/config
              readOnly: true
            - name: assets
              mountPath: /app/assets
              readOnly: true
          securityContext:
            capabilities:
              drop:
                - ALL
            readOnlyRootFilesystem: true
      volumes:
        - name: config
          hostPath:
            path: /mnt/local/glance/config
            type: Directory
        - name: assets
          hostPath:
            path: /mnt/local/glance/assets
            type: Directory
      restartPolicy: Always
      securityContext:
        seccompProfile:
          type: RuntimeDefault
