k8s/apps/_retired/glance/resources/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app

spec:
  selector:
    app: default
  ports:
    - name: http
      port: 8080
      targetPort: http
      protocol: TCP
